#gpp: GeoProc Python
gppdir = ${pkgdatadir}/python

gpp_SCRIPTS = \
  aggregate.py \
  analyze_cookie_files.py \
  analyze_email_files.py \
  analyze_exif_headers.py \
  analyze_ipv4s.py \
  bulk_extractor_reader.py \
  create_location_ground_truth.py \
  dfxml.py \
  extract_cookie_files.py \
  extract_email_files.py \
  evaluate.py \
  fetch_location_lists.py \
  fiwalk.py \
  geoproc_cfg.py \
  geoproc_library.py \
  identify_filenames.py \
  make_kml.py \
  populate_maxmind_tables_from_zips.py \
  reconstruct.py \
  report.py \
  sort_bulk_extractor_features.py \
  success.py \
  summarize.py \
  test_argparse.py \
  verify_fiwalk_versus_tsk_db.py \
  verify_tsk_db.py

EXTRA_DIST = \
  $(gpp_SCRIPTS)
