scriptsdir = $(pkgdatadir)/process
dist_scripts_DATA = geoproc.mk \
  analyze_cookie_files.sh \
  analyze_email_files.sh \
  analyze_exif_headers.sh \
  analyze_ipv4s.sh \
  check_bulk_extractor.sh \
  check_dependencies.sh \
  do_bulk_extractor.sh \
  do_identify_filenames.sh \
  do_tcpflow_on_bulk_extractor_net.sh \
  extract_cookie_files.sh \
  extract_email_files.sh \
  fault_tolerance.cfg \
  fetch_location_lists.sh \
  make_fiwalk_dfxml.sh \
  make_kml.sh \
  make_reconstructed_emailheaders.sh \
  make_reconstructed_httpheaders.sh \
  make_tsk_db.sh \
  verify_disk_image.sh \
  verify_fiwalk_dfxml.sh \
  verify_fiwalk_versus_tsk_db.sh \
  verify_tsk_db.sh
